# your-ai-ally

./: .gitignore  index.py  init.py  requirements.txt  test.py
backend/: app.py  client.html  client.py  index.py  requirements.txt
backend/playwright_computer_use/: async_api.py  loop.py
backend/scripts/: run.sh
frontend/: package.json  pnpm-lock.yaml
frontend/src/: app.d.ts
frontend/src/lib/: commands.ts
frontend/src/lib/components/custom/: actionInput.svelte  browser.svelte  command.svelte  gradientText.svelte  spinner.svelte
frontend/src/lib/components/custom/messages/: agent.svelte  container.svelte  user.svelte
frontend/src/lib/components/ui/command/: command.svelte
frontend/src/lib/events/: clickOutside.ts
frontend/src/lib/stores/: browserStore.ts  messages.ts  turn.ts
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/session/: +page.svelte
lighthouse_reports/: lighthouse_https_www_meta_com_1740470304.json  lighthouse_https_www_meta_com_1740470335.html  lighthouse_https_www_meta_com_1740544615.json  lighthouse_https_www_meta_com_1740544652.html
playwright_claude_lib/: .env-example  .pre-commit-config.yaml  README.md  demo.py  loop.py  pyproject.toml  reset.sh
playwright_claude_lib/src/playwright_computer_use/: __init__.py  async_api.py  sync_api.py
playwright_claude_lib/src/playwright_computer_use.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
playwright_computer_use/: async_api.py
